--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,11 @@
 
 @layer base {
   :root {
-    --accent1: #ff8a00;
-    --accent2: #53b148;
-    --bgGrayColor: #f3f3f3;
-    --bgColor: #ffffff;
-    --textColor: #404040;
+    --accent1: 32, 100%, 50%;
+    --accent2: 114, 42%, 49%;
+    --bgGrayColor: 0, 0%, 95%;
+    --bgColor: 0, 0%, 100%;
+    --textColor: 0, 0%, 25%;
 
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
@@ -28,8 +28,8 @@
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
 
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
+    --accent: 0, 0%, 95%;
+    --accent-foreground: 0, 0%, 25%;
 
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
